# turbovecquant

./: .env.example  .gitignore  Cargo.toml  README.md  benchmark.py  pyproject.toml  turboquant.py
.github/workflows/: release-pypi.yml
benchmarks/: create_diagrams.py
benchmarks/results/: recall_d1536_2bit.json  recall_d1536_4bit.json  recall_d3072_2bit.json  recall_d3072_4bit.json  recall_glove_2bit.json  recall_glove_4bit.json  speed_d1536_2bit_arm_mt.json  speed_d1536_2bit_arm_st.json  speed_d1536_2bit_x86_mt.json  speed_d1536_2bit_x86_st.json  speed_d1536_4bit_arm_mt.json  speed_d1536_4bit_arm_st.json  speed_d1536_4bit_x86_mt.json  speed_d1536_4bit_x86_st.json  speed_d3072_2bit_arm_mt.json  speed_d3072_2bit_arm_st.json  speed_d3072_4bit_arm_mt.json  speed_d3072_4bit_arm_st.json
benchmarks/suite/: recall_d1536_2bit.py  recall_d1536_4bit.py  recall_d3072_2bit.py  recall_d3072_4bit.py  recall_glove_2bit.py  recall_glove_4bit.py
src/: lib.rs
turbovec/: Cargo.toml
turbovec-python/: Cargo.toml  pyproject.toml
turbovec-python/python/turbovec/llm/: __init__.py  cache.py  embedders.py  eviction.py  gating.py  llm.py  memory.py  observability.py  pricing.py  proxy.py  rag.py  redaction.py  retries.py
turbovec-python/python/turbovec/llm/stores/: __init__.py  memory_store.py  pickle_store.py  redis_store.py
turbovec-python/src/: lib.rs
turbovec-python/tests/: _llm_fakes.py  conftest.py  test_cache_prod.py  test_eviction_and_retries.py  test_gating_and_streaming.py  test_memory.py  test_native_delete.py  test_proxy.py  test_rag_compressor.py  test_semantic_cache.py  test_stores.py
turbovec-python/tests/live/: conftest.py  test_anthropic_live.py  test_gemini_live.py  test_openai_live.py  test_proxy_live.py
turbovec/src/: io.rs  lib.rs  search.rs
turbovec/tests/: deletion.rs
